Css Hero arrows

--- a/public_html/themes/custom/b5subtheme/scss/subtheme.scss
+++ b/public_html/themes/custom/b5subtheme/scss/subtheme.scss
@@ -1,3 +1,8 @@
+/* Hero fixes */
+.flex-direction-nav a {
+    height: 60px;
+}
+
 /* Hide lenght on T-Max */
 .commerce-order-item-add-to-cart-form-commerce-product-1 .js-form-item.form-item.js-form-type-select.form-type-select.js-form-item-purchased-entity-0-attributes-attribute-length-mm.form-item-purchased-entity-0-attributes-attribute-length-mm,
 .commerce-order-item-add-to-cart-form-commerce-product-4 .js-form-item.form-item.js-form-type-select.form-type-select.js-form-item-purchased-entity-0-attributes-attribute-length-mm.form-item-purchased-entity-0-attributes-attribute-length-mm,
