--- a/public_html/themes/custom/b5subtheme/scss/subtheme.scss
+++ b/public_html/themes/custom/b5subtheme/scss/subtheme.scss
@@ -58,6 +58,10 @@ li.breadcrumb-item {
 
 /* The better mega menu */
 
+.region.region-nav-main {
+    margin: 0 1rem 0 0;
+}
+
 .tbm.tbm--mobile.tbm--mobile-show .tbm-collapse {
     display: block;
     width: 90vw;
