--- a/public_html/themes/custom/b5subtheme/css/style.css
+++ b/public_html/themes/custom/b5subtheme/css/style.css
@@ -118,6 +118,19 @@ li.breadcrumb-item {
   border: 0px solid rgba(255, 255, 255, 0.2);
 }
 
+.tbm-button-container span {
+  display: block;
+  position: absolute;
+  height: 0.375rem;
+  width: 100%;
+  background: #09adde;
+  border-radius: 3px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: 0.25s ease-in-out;
+}
+
 .tbm-subnav > .tbm-item > .tbm-link-container > .tbm-link {
   color: #fff;
   text-decoration: none;
@@ -199,20 +212,6 @@ div#block-cartflyout {
   margin: auto 0;
 }
 
-/*.dropdown-menu {
-    --bs-dropdown-color: #212529;
-    --bs-dropdown-bg: #fff;
-    --bs-dropdown-link-color: #212529;
-    --bs-dropdown-link-hover-color: #1e2125;
-    --bs-dropdown-link-hover-bg: #e9ecef;
-    --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #4b4c4d;
-    --bs-dropdown-header-color: #6c757d;
-    background-color: #737373;
-    background-clip: padding-box;
-    border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color);
-    border-radius: var(--bs-dropdown-border-radius);
-}*/
 /* Taxonomy page */
 article.contextual-region.node.node--type-article.node--view-mode-teaser h2, article.contextual-region.node.node--type-article.node--view-mode-teaser .h2 {
   display: none;
@@ -254,25 +253,6 @@ a#superfish-main-toggle span {
   font-size: 44px;
 }
 
-/*#superfish-main-toggle {
-    margin: 0;
-    padding: 0;
-    float: right;
-}
-
-a#superfish-main-toggle {
-text-decoration: none;
-color: #fff;
-}
-
-a#superfish-main-toggle.sf-expanded {
-    /* float: right; */
-/* display: block; */
-/*margin-top: -60px;*/
-/* padding: 0px; */
-/*z-index: 9999;*/
-/*left: 90%;
-}*/
 /* Article */
 figure.caption {
   margin: 5%;
