Css table rows add border

--- a/public_html/themes/custom/b5subtheme/scss/subtheme.scss
+++ b/public_html/themes/custom/b5subtheme/scss/subtheme.scss
@@ -1,3 +1,9 @@
+/* Table rows */
+.tablesaw-stack tr {
+    display: table-row;
+    border: 1px solid #ccc;
+}
+
 /* header */
 header.bg-dark {
     border-bottom: 2px solid #00addd;
