--- a/public_html/themes/custom/b5subtheme/css/style.css
+++ b/public_html/themes/custom/b5subtheme/css/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+/* Table rows */
+.tablesaw-stack tr {
+  display: table-row;
+  border: 1px solid #ccc;
+}
+
 /* header */
 header.bg-dark {
   border-bottom: 2px solid #00addd;
